--- a/package.json
+++ b/package.json
@@ -14,19 +14,22 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-cli": "^3.1.0"
   },
-  "dependncies": {
+  "dependencies": {
+    "@material-ui/core": "^1.4.0",
+    "angular": "^1.6.3",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.17.2",
     "express": "^4.15.0",
     "express-session": "^1.15.6",
+    "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
-    "path": "^0.12.7",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "mysql": "^2.13.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1"
   }
 }
