--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1",
+    "webpack": "^2.7.0",
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
@@ -30,6 +30,8 @@
     "mysql": "^2.13.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0"
   }
 }
