--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "babel-register": "^6.26.0",
     "webpack": "^2.7.0",
     "webpack-cli": "^3.1.0"
   },
