--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.0",
+    "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
+    "morgan": "^1.9.0",
     "mysql": "^2.13.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
