--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.17.2",
+    "css-loader": "^1.0.0",
     "express": "^4.15.0",
     "express-session": "^1.15.6",
     "jquery": "^3.1.1",
@@ -33,9 +34,12 @@
     "mysql": "^2.13.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-google-login": "^3.2.1",
+    "react-images-upload": "^1.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
+    "style-loader": "^0.21.0",
     "url-loader": "^1.0.1"
   }
 }
