--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.17.2",
-    "css-loader": "^1.0.0",
+    "bootstrap": "^4.1.3",
+    "bootstrap-social": "^5.1.1",
     "cookie-parser": "^1.4.3",
+    "css-loader": "^1.0.0",
     "express": "^4.15.0",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
     "morgan": "^1.9.0",
@@ -39,6 +42,7 @@
     "passport-local": "^1.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-facebook-login": "^4.0.1",
     "react-google-login": "^3.2.1",
     "react-images-upload": "^1.2.0",
     "react-redux": "^5.0.7",
